Added series credits to scraper with compression.