@@ -14,6 +14,7 @@ dependencies {
 	implementation libs.quarkus.kafka
 	implementation libs.quarkus.rest.jackson
 	implementation libs.quarkus.rest.client.jackson
+	implementation libs.zstd.jni
 	
 	testImplementation libs.quarkus.junit5
 }
@@ -22,6 +23,9 @@ group = 'com.erdouglass.emdb'
 version = '1.0.0-SNAPSHOT'
 
 quarkusDev {
-  jvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
+  jvmArgs = [
+  	'--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+  	'--enable-native-access=ALL-UNNAMED',
+  ]
 }
 
